Enhance benchmarking and retrieval performance by adding new JMH benchmarks, optimizing weight initialization in BioHash and FlyHash, and implementing parallel encoding and retrieval methods. Update Justfile for Java module support and project configuration for JVM 17.  Numerical methods now support 3 backends: scalar (plain Scala), JDK Vector API, and BLAS/native using dev.ludovic.netlib:blas