@@ -1,4 +1,7 @@
 //> using scala 3.7.3
+//> using jvm 17
+//> using javaOpt --add-modules=jdk.incubator.vector
 //> using dep org.scalameta::munit::1.3.1
 //> using dep org.openjdk.jmh:jmh-core:1.37
 //> using dep org.openjdk.jmh:jmh-generator-annprocess:1.37
+//> using dep dev.ludovic.netlib:blas:3.2.0
